[fix]#8274 align userbook search button

--- a/css/modules.less
+++ b/css/modules.less
@@ -210,6 +210,12 @@ button, input[type=button], a.button, input[type=submit], .drop-down-button labe
 	}
 }
 
+form{
+	.search input[type=submit]{
+		padding: 0px 18px;
+	}
+}
+
 @-webkit-keyframes ripple {
 	100% {
 		opacity: 0;
